fix spacing of rgba values

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ a {
 
 #logo h1 a {
     color: #1f1f1f;
-    text-shadow: 1px 1px 0px rgba(0,0,0,.2);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 
 #logo p {
@@ -130,7 +130,7 @@ a {
     padding: 0px 20px 0px 20px;
     text-decoration: none;
     text-align: center;
-    text-shadow: 1px 1px 0px rgba(0,0,0,.2);
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
